--- a/index.html
+++ b/index.html
@@ -178,37 +178,52 @@
         <div class="list-item" data-criteria="Macro-Economic Analysis" style="width: 100%;">
           <h3>Macro-Economic Analysis</h3>
           <p>
-            We begin by assessing the macroeconomic landscape, focusing on key indicators such as GDP growth, inflation rates, foreign direct investment (FDI) flows, and demographic trends. By analyzing these factors, we identify markets with high growth potential and long-term stability. Our proprietary algorithms process vast datasets to pinpoint anomalies and trends that might otherwise go unnoticed.
+            We begin by assessing the macroeconomic landscape, focusing on key indicators such as GDP growth, 
+            inflation rates, foreign direct investment (FDI) flows, and demographic trends. By analyzing these 
+            factors, we identify markets with high growth potential and long-term stability. Our proprietary 
+            algorithms process vast datasets to pinpoint anomalies and trends that might otherwise go unnoticed.
           </p>
         </div>
         <div class="list-item" data-criteria="Political and Regulatory Landscape" style="width: 100%;">
           <h3>Political and Regulatory Landscape</h3>
           <p>
-            Understanding the political and regulatory environment is crucial to evaluating the viability of investments in emerging markets. Our team conducts in-depth research on governance quality, policy frameworks, and regulatory risks, providing a nuanced perspective on how political dynamics might impact business operations and investment returns.
+            Understanding the political and regulatory environment is crucial to evaluating the viability 
+            of investments in emerging markets. Our team conducts in-depth research on governance quality, 
+            policy frameworks, and regulatory risks, providing a nuanced perspective on how political 
+            dynamics might impact business operations and investment returns.
           </p>
         </div>
         <div class="list-item" data-criteria="Sector-Specific Insights" style="width: 100%;">
           <h3>Sector-Specific Insights</h3>
           <p>
-            We delve into sector-level analysis to identify industries poised for growth within each market. By leveraging advanced analytics and on-the-ground intelligence, we map out competitive landscapes, supply chain efficiencies, and innovation trajectories, ensuring that we focus on sectors with the highest potential for disruption and profitability.
+            We delve into sector-level analysis to identify industries poised for growth within each market. 
+            By leveraging advanced analytics and on-the-ground intelligence, we map out competitive landscapes, supply chain efficiencies, and innovation trajectories, ensuring that we focus on sectors with the highest potential for disruption and profitability.
           </p>
         </div>
         <div class="list-item" data-criteria="Sustainability and SDG Considerations" style="width: 100%;">
           <h3>Sustainability and SDG Considerations</h3>
           <p>
-            We integrate the United Nations Sustainable Development Goals (SDGs) into our evaluation process, aligning our approach with these global objectives. Our assessments focus on how markets contribute to sustainable development, emphasizing climate resilience, social equity, and responsible governance. This approach ensures that our recommendations support both economic growth and progress toward achieving the SDGs, fostering long-term viability and meaningful impact.
+            We integrate the United Nations Sustainable Development Goals (SDGs) into our evaluation process, 
+            aligning our approach with these global objectives. Our assessments focus on how markets contribute 
+            to sustainable development, emphasizing climate resilience, social equity, and responsible governance. 
+            This approach ensures that our recommendations support both economic growth and progress toward achieving 
+            the SDGs, fostering long-term viability and meaningful impact.
           </p>
         </div>
         <div class="list-item" data-criteria="Risk Assessment and Mitigation" style="width: 100%;">
           <h3>Risk Assessment and Mitigation</h3>
           <p>
-            Emerging markets often present unique risks, including currency volatility, geopolitical tensions, and infrastructure gaps. Our comprehensive risk assessment framework identifies these challenges and develops mitigation strategies. We stress-test scenarios and create contingency plans to safeguard investments.
+            Emerging markets often present unique risks, including currency volatility, geopolitical tensions, 
+            and infrastructure gaps. Our comprehensive risk assessment framework identifies these challenges and 
+            develops mitigation strategies. We stress-test scenarios and create contingency plans to safeguard investments.
           </p>
         </div>
         <div class="list-item" data-criteria="Local Partnerships and On-the-Ground Expertise" style="width: 100%;">
           <h3>Local Partnerships and On-the-Ground Expertise</h3>
           <p>
-            We collaborate with local experts, institutions, and businesses to gain nuanced insights that are not accessible through conventional research methods. These partnerships enable us to validate our findings, adapt to cultural nuances, and uncover hidden opportunities.
+            We collaborate with local experts, institutions, and businesses to gain nuanced insights that are 
+            not accessible through conventional research methods. These partnerships enable us to validate our 
+            findings, adapt to cultural nuances, and uncover hidden opportunities.
           </p>
         </div>
         <div class="list-item" data-criteria="Dynamic Monitoring and Adaptation" style="width: 100%;">
