--- a/index.html
+++ b/index.html
@@ -188,9 +188,7 @@
           <h3>Political and Regulatory Landscape</h3>
           <p>
             Understanding the political and regulatory environment is crucial to evaluating the viability 
-            of investments in emerging markets. Our team conducts in-depth research on governance quality, 
-            policy frameworks, and regulatory risks, providing a nuanced perspective on how political 
-            dynamics might impact business operations and investment returns.
+            of investments in emerging markets. Our team conducts in-depth research on governance quality, policy frameworks, and regulatory risks, providing a nuanced perspective on how political dynamics might impact business operations and investment returns.
           </p>
         </div>
         <div class="list-item" data-criteria="Sector-Specific Insights" style="width: 100%;">
