inserted email adress

--- a/terms.html
+++ b/terms.html
@@ -74,8 +74,7 @@
         <p>
             Prices for our products and services are displayed on our website and are subject to change.
             Payments must be accurate and up to date. Refunds may be granted on a case-by-case basis, in
-            compliance with applicable consumer protection laws. For refund inquiries, contact us at [Insert
-            Email Address].
+            compliance with applicable consumer protection laws. For refund inquiries, contact us at contactdisruptivecapital@gmail.com.
         </p>
         
         <h3>Limitation of Liability</h3>
