So i created a seperate navigation tab that i am going to replace the old one wiht and made it as a seperate file, instead of one whole index.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           <div class="dropdown-menu">
             <a href="./risingstars.html"> Emerging Markets</a>
             <a href="./heatmap.html"> Established Markets</a>
+            <a href="./Menu/Market Assessment.html">Market Assessment</a>
             <a href="./reports/index.html">Access All</a>
           </div>
         </div>
