added the flags

--- a/index.html
+++ b/index.html
@@ -18,42 +18,13 @@
     <title>Disruptive Capital</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="scripts.js" defer></script>
+    <script src="/Components/Header.js"></script>
+    <script src="/Components/Footer.js"></script>
   </head>
 
   <body>
     <!--Header Component-->
-    <header class="header">
-      <nav class="logo">
-        <a href="index.html"
-          ><img src="./images/dclogo.png" alt="Disruptive Capital Logo"
-        /></a>
-        <a href="index.html"><h4>Disruptive Capital</h4></a>
-      </nav>
-
-      <!-- Hamburger Menu Icon (Visible on Mobile Only) -->
-      <div class="menu-icon" id="menu-icon" onclick="toggleMenu(this)">
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-
-      <!-- Navigation Menu -->
-      <nav class="nav" id="nav-menu">
-        <div class="dropdown-container">
-          <a href="./reports/index.html" class="dropdown">Reports & Insights</a>
-          <div class="dropdown-menu">
-            <a href="./risingstars.html"> Emerging Markets</a>
-            <a href="./heatmap.html"> Established Markets</a>
-            <a href="./Menu/Market Assessment.html">Market Assessment</a>
-            <a href="./reports/index.html">Access All</a>
-          </div>
-        </div>
-        <a href="./index.html">Home</a>
-        <a href="./about/index.html">About Us</a>
-        <a href="./contact/index.html">Contact</a>
-        <a href="./premium/index.html">Subscribe</a>
-      </nav>
-    </header>
+    <dc-header></dc-header>
 
     <!-- Hero Section -->
     <section class="hero">
@@ -335,12 +306,7 @@
 
 -->
     <!--Footer Component-->
-    <div id="footer"></div>
-    <script>
-      fetch('footer.html')
-        .then(response => response.text())
-        .then(html => document.getElementById('footer').innerHTML = html);
-    </script>
+    <dc-footer></dc-footer>
 
 
     <script>
